07_Resources/EC2/security_group.json
{
	"EC2SecurityGroup": {
		"Type": "AWS::EC2::SecurityGroup",
		"Properties": {
			"GroupDescription": "This group allows Rsyslog to receive logs and lcoal remote acces over SSH.",
			"VpcId": { "Ref": "VPCParam" },
			"SecurityGroupEgress": [
				{
					"IpProtocol": "-1",
					"FromPort": -1,
					"ToPort": -1,
					"CidrIp": { "Ref": "CidrParam" }
				}
			],
			"SecurityGroupIngress": [
				{
					"IpProtocol": "tcp",
					"FromPort": 6514,
					"ToPort": 6514,
					"Description": "Rsyslog",
					"CidrIp": { "Ref": "VPCCidrBlockParam" }
				},
				{
					"IpProtocol": "tcp",
					"FromPort": 22,
					"ToPort": 22,
					"Description": "SSH",
					"CidrIp": { "Ref": "VPCCidrBlockParam" }
				}
			],
			"Tags": [
				{
					"Key": "Name",
					"Value": "0x4447_rsyslog"
				}
			]
		}
	}
}
